# quake

./: .buildinfo  .flake8  .gitignore  .gitmodules  CMakeLists.txt  CNAME  Dockerfile  LICENSE  README.md  api.html  compose-multi-node.yaml  compose.yaml  coordinator.html  development_guide.html  genindex.html  index.html  install.html  objects.inv  py-modindex.html  pyproject.toml  quickstart.html  search.html  searchindex.js  setup.cfg  setup.py
.doctrees/: api.doctree  coordinator.doctree  development_guide.doctree  environment.pickle  index.doctree  install.doctree  quickstart.doctree
.doctrees/architecture/: architecture.doctree  dynamic_inverted_list.doctree  index_partition.doctree  maintenance_policy.doctree  partition_manager.doctree  query_coordinator.doctree
.github/actions/build-quake/: action.yaml
.github/actions/determine-container/: action.yaml
.github/actions/setup-env/: action.yaml
.github/self_hosted_runner/: docker-compose.yaml
.github/workflows/: build_and_publish_docs.yaml  build_and_test.yaml  container_setup.yaml  lint.yaml  local_runner_tests.yaml  publish_docker_image.yaml  regression_baseline.yaml  regression_baseline_generation.yaml  run_regression.yaml  setup_container.yaml  setup_environment.yaml
_images/: graphviz-2cc54dbca9b5d003b152246bd996b25cf6b83095.png.map  graphviz-c798fc8f2f95b1a7acbd1f13005fd3b8897cb7c7.png.map  graphviz-cda400c34ff8d3643e69a6ee440a8d5b5af624ea.png.map
_modules/: index.html
_modules/quake/: workload_generator.html
_modules/quake/datasets/: ann_datasets.html
_modules/quake/index_wrappers/: faiss_hnsw.html  faiss_ivf.html  quake.html
_sources/: index.rst.txt  quickstart.rst.txt
_sources/architecture/: architecture.rst.txt  dynamic_inverted_list.rst.txt  index_partition.rst.txt
_static/css/: modify.css
architecture/: architecture.html  dynamic_inverted_list.html  index_partition.html  maintenance_policy.html  partition_manager.html  query_coordinator.html
docker/ubuntu-latest/: Dockerfile
docs/: api.rst  architecture.rst  conf.py  coordinator.rst  development_guide.rst  index.rst  index.rst.rej  install.rst  modules.rst  quickstart.rst
docs/architecture/: maintenance_policy.rst  partition_manager.rst  query_coordinator.rst
environments/ubuntu-cpu/: Dockerfile
environments/ubuntu-cuda/: Dockerfile  conda.yaml
environments/ubuntu-cuda118/: Dockerfile  conda.yaml
environments/ubuntu-cuda124/: Dockerfile  conda.yaml
environments/ubuntu-latest/: Dockerfile  conda.yaml
examples/: quickstart.py  quickstart_dist.py  quickstart_multidist.py  quickstart_multidist_with_partitions.py
examples/workload_generator/: basic_usage.py
scripts/: autoformat.sh  check_lint.sh  trace_metrics.py
src/cpp/bindings/: wrap.cpp
src/cpp/include/: GPUIndexPartition.h  atomicops.h  blas_dist.h  buffer_manager.h  clustering.h  common.h  cuv_cluster.h  disk_index_partition.h  dynamic_centroid_store.h  dynamic_inverted_list.h  dynamic_ivf.h  fifo_policy.h  file_index_partition.h  geometry.h  hit_count_tracker.h  index_partition.h  index_partition.h.rej  latency_estimation.h  list_scanning.h  lru_policy.h  maintenance_cost_estimator.h  maintenance_policies.h  parallel.h  params.h  partition_manager.h  policy.h  quake_index.h  query_coordinator.h  timing_info.h
src/cpp/include/sorting/: floyd_rivest_select.h  heap_select.h  median_common.h  pdqsort.h  readerwriterqueue.h
src/cpp/src/: buffer_manager.cpp  clustering.cpp  disk_index_partition.cpp  dynamic_centroid_store.cpp  dynamic_inverted_list.cpp  dynamic_ivf.cpp  fifo_policy.cpp  file_index_partition.cpp  hit_count_tracker.cpp  index_partition.cpp  latency_estimation.cpp  lru_policy.cpp  maintenance_cost_estimator.cpp  maintenance_policies.cpp  partition_manager.cpp  quake_index.cpp  query_coordinator.cpp
src/python/: __init__.py  utils.py  workload_generator.py
src/python/datasets/: __init__.py  ann_datasets.py
src/python/distributedwrapper/: __init__.py  distributedindex.py  rwrap_pb2.py  rwrap_pb2.pyi  rwrap_pb2_grpc.py  rwrapper.py
src/python/distributedwrapper/protos/: rwrap.proto
src/python/index_wrappers/: __init__.py  diskann.py  dynamic_ivf.py  faiss_hnsw.py  faiss_ivf.py  faiss_wrapper.py  quake.py  scann.py  vamana.py  wrapper.py
test/cpp/: CMakeLists.txt  benchmark.cpp  clustering.cpp  dynamic_inverted_list.cpp  dynamic_ivf.cpp  hit_count_tracker.cpp  index_partition.cpp  latency_estimator.cpp  list_scanning.cpp  main.cpp  maintenance.cpp  maintenance_cost_estimator.cpp  partition_manager.cpp  quake_index.cpp  quake_multi_level.cpp  query_coordinator.cpp  scan_benchmark.cpp  search_recall_tests.cpp  test_clustering_benchmark.cpp  test_clustering_correctness.cpp  test_cuvs_clustering.cpp  topk_buffer.cpp
test/cpp/benchmark/: dynamic_centroid_benchmarking.cpp  dynamic_numa_profiling.cpp  mstruing_debug.cpp  numa_profiling.cpp  queue_benchmarking.cpp  recall_estimation.cpp  simsimd_single_benchmark.py  throughput_maximize_benchmark.cpp
test/experiments/adaptive_partition_scanning/: aps.py  run.py
test/experiments/adaptive_partition_scanning/configs/: sift1m.yaml
test/experiments/maintenance_ablation/: maintenance_ablation.py
test/experiments/maintenance_ablation/configs/: sift1m_write_heavy.yaml
test/experiments/osdi2025/: README.md  experiment_runner.py  experiment_utils.py  install.sh
test/experiments/osdi2025/aps_recall_targets/: run.py
test/experiments/osdi2025/early_termination/: laet.py  run.py  util_laet.py
test/experiments/osdi2025/kick_the_tires/: run.py
test/experiments/osdi2025/maintenance_ablation/: run.py
test/experiments/osdi2025/multi_level/: run.py
test/experiments/osdi2025/numa_multi_query/: run.py
test/experiments/osdi2025/numa_single_query/: run.py
test/experiments/osdi2025/vary_levels/: run.py
test/experiments/query_processing_perf/: vary_workers.py
test/experiments/query_processing_perf/configs/: sift1m_read_only.yaml
test/python/: test_basic.py  test_workload_generator.py
test/python/regression/: compare_results.py  run_all_workloads.py  run_regression_test.py  run_workload.py
(+16 files in other folders)
