[metadata]
name = quake
version = 0.0.1
description = Dynamic index for vector search
long_description = file: README.md
long_description_content_type = text/markdown

# Author information
author = Jason Mohoney
author_email = mohoney2@wisc.edu
maintainer = Jason Mohoney
maintainer_email = mohoney2@wisc.edu

# License information
license = Apache-2.0
license_files = LICENSE

[options]
install_requires =
    torch>=2.0

zip_safe = false
python_requires = >=3.9
include_package_data = true

packages =
    quake

package_dir =
    quake = src/python