[metadata]
name = quake
version = 0.0.1
description = Dynamic index for vector search
long_description = file: README.md
long_description_content_type = text/markdown

[options]
install_requires =
    torch>=2.0

zip_safe = false
python_requires = >=3.9
include_package_data = true

packages =
    quake
    quake.index_wrappers
    quake.datasets

package_dir =
    quake = src/python
    quake.index_wrappers = src/python/index_wrappers
    quake.datasets = src/python/datasets